/*
 * $Id: ChangeLog,v 1.5507 2007/05/11 10:22:05 marchuet Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2007-05-11 13:00 UTC+0100 Miguel Angel Marchuet (miguelangel/at/marchuet.net)
  * include/adordd.ch
  * include/usrrdd.ch
  * source/rdd/usrrdd/rdds/adordd.prg
    + Added FireBird support
    + ADO_CLOSE( nWA )
    + ADO_ZAP( nWA )
    * ADO_ORDINFO( nWA, nIndex, aOrderInfo ) 
    + ADO_RECINFO( nWA, nRecord, nInfoType, uInfo )
    + Added support to new FieldTypes DateTime, TimeStamp, Ole.
   
  * include/hbdbf.h
    + some comments.

  * include/hbtypes.h
    * corrected definition function. VM_PROCESS_DLL_SYMBOLS
      but is not enougth to execute correctly PCODE in DLL.   

2007-05-10 22:00 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * include/hbpp.h
  * source/pp/ppcore.c
    * Hack to support Extended Codeblocks as Expressions

  * source/compiler/harbour.c
  * source/compiler/harbour.sly
    * Corrected generation of Extended Codeblocks to use HB_P_FRAME

  * source/vm/memvars.c
    * Silly memory leak, mistake in last commit

2007-05-10 14:40 UTC-0300 Ranier Vilela <ranier/at/cultura.com.br>
  * source/vm/inet.c
    * Minor optimizations

2007-05-10 01:38 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * source/compiler/genc.c
  * source/compiler/harbour.c
  * source/compiler/harbour.sly
  * source/compiler/hbident.c
    * Work in progress - started cleanup of memory leaks in compiler
      /* Any help will be greatly appreciated. */

2007-05-09 15:51 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * include/hbclass.ch
    * Corrected missing space to avoid unintentional concatanation of AS TYPE ...

  * include/hbmemory.ch
  * source/vm/fm.c
    + Added HB_MEM_BLOCKS (tottal numbers of allocated blocks

  * source/vm/memvars.c
    * Fixed memory leak
    * Minor simplifications
